k04-admission-control/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nigeldouglas
  labels:
    gatekeeper: "true"
