k04-admission-control/ubuntu-debootstrap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-debootstrap
spec:
  containers:
  - name: ubuntu-debootstrap
    image: ubuntu-debootstrap:latest
    securityContext:
      privileged: true
