k04-admission-control/ConstraintTemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
      validation:
        openAPIV3Schema:
          properties:
            repos:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        violation[{"msg": msg}] {
          image := input.review.object.spec.containers[_].image
          not allowed_image(image)
          msg := sprintf("The image '%v' is not allowed. Allowed repos are: %v", [image, input.parameters.repos])
        }

        allowed_image(image) {
          some repo
          image matches repo
          repo := input.parameters.repos[_]
        }
